[gd_scene load_steps=24 format=2]

[ext_resource path="res://Scenes/Player.tscn" type="PackedScene" id=1]
[ext_resource path="res://UI/analog_base.png" type="Texture" id=2]
[ext_resource path="res://UI/analog_button.png" type="Texture" id=3]
[ext_resource path="res://UI/analog_button_pressed.png" type="Texture" id=4]
[ext_resource path="res://Scripts/joystickbutton.gd" type="Script" id=5]
[ext_resource path="res://Scripts/Waterfall.gd" type="Script" id=6]
[ext_resource path="res://Scenes/Moon.tscn" type="PackedScene" id=7]
[ext_resource path="res://backbar.png" type="Texture" id=8]
[ext_resource path="res://UI/backg.png" type="Texture" id=9]
[ext_resource path="res://Scripts/Tide.gd" type="Script" id=10]
[ext_resource path="res://UI/tide.png" type="Texture" id=11]
[ext_resource path="res://Scenes/Star.tscn" type="PackedScene" id=12]
[ext_resource path="res://Scenes/StickyWall.tscn" type="PackedScene" id=13]
[ext_resource path="res://Scripts/DuplicateThresh.gd" type="Script" id=14]
[ext_resource path="res://FUTUREX_.ttf" type="DynamicFontData" id=15]
[ext_resource path="res://Scripts/Score.gd" type="Script" id=16]
[ext_resource path="res://Scripts/Pausebutton.gd" type="Script" id=17]

[sub_resource type="RectangleShape2D" id=1]
extents = Vector2( 33.7347, 3302.91 )

[sub_resource type="RectangleShape2D" id=2]
extents = Vector2( 382.525, 16.4985 )

[sub_resource type="RectangleShape2D" id=3]
extents = Vector2( 298.675, 25.993 )

[sub_resource type="RectangleShape2D" id=4]
extents = Vector2( 2421.77, 412.011 )

[sub_resource type="CircleShape2D" id=5]
radius = 40.0

[sub_resource type="DynamicFont" id=6]
size = 64
outline_size = 2
outline_color = Color( 0, 0, 0, 1 )
use_filter = true
font_data = ExtResource( 15 )

[node name="World" type="Node2D"]

[node name="DuplicateThresh" type="Area2D" parent="."]
position = Vector2( 302.04, 172.759 )
script = ExtResource( 14 )

[node name="backg" type="Sprite" parent="DuplicateThresh"]
position = Vector2( 18.242, -207.259 )
scale = Vector2( 1.08027, 4.31583 )
texture = ExtResource( 9 )

[node name="LWall" type="Area2D" parent="DuplicateThresh" groups=[
"object",
"water",
]]
position = Vector2( -336.746, 500 )
script = ExtResource( 6 )

[node name="backbar2" type="Sprite" parent="DuplicateThresh/LWall"]
modulate = Color( 0.152941, 0.141176, 0.141176, 1 )
position = Vector2( -39.294, -690.759 )
scale = Vector2( 0.0502776, 20.2972 )
texture = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DuplicateThresh/LWall"]
visible = false
shape = SubResource( 1 )

[node name="RWall" type="Area2D" parent="DuplicateThresh" groups=[
"object",
"water",
]]
position = Vector2( 333.344, 502.67 )
script = ExtResource( 6 )

[node name="backbar3" type="Sprite" parent="DuplicateThresh/RWall"]
modulate = Color( 0.192157, 0.180392, 0.180392, 1 )
position = Vector2( 39.5469, -710.457 )
scale = Vector2( 0.0524035, 20.0545 )
texture = ExtResource( 8 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DuplicateThresh/RWall"]
visible = false
shape = SubResource( 1 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="DuplicateThresh"]
shape = SubResource( 2 )

[node name="Player" parent="." groups=[
"player",
] instance=ExtResource( 1 )]
position = Vector2( 294, 893 )

[node name="Floor" type="StaticBody2D" parent="."]
position = Vector2( 277.647, 989.116 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Floor"]
position = Vector2( 23.5452, 1.68182 )
shape = SubResource( 3 )

[node name="backbar" type="Sprite" parent="Floor"]
modulate = Color( 0.823529, 0.72549, 1, 1 )
position = Vector2( 22.9213, 246.659 )
scale = Vector2( 0.169332, 2.16735 )
texture = ExtResource( 8 )

[node name="Tide" type="Area2D" parent="."]
position = Vector2( 282.986, 1300 )
script = ExtResource( 10 )

[node name="StartThreshold" type="Area2D" parent="Tide"]
position = Vector2( 19.0538, -505.258 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tide/StartThreshold"]
visible = false
shape = SubResource( 2 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="Tide"]
visible = false
position = Vector2( 4.48975, 341.229 )
shape = SubResource( 4 )

[node name="Timer" type="Timer" parent="Tide"]
wait_time = 0.005
one_shot = true

[node name="tide" type="Sprite" parent="Tide"]
modulate = Color( 0, 0, 0, 0.843137 )
position = Vector2( 5.01401, 1223 )
scale = Vector2( 3.01517, 3.15366 )
texture = ExtResource( 11 )

[node name="Timer2" type="Timer" parent="Tide"]

[node name="UI" type="CanvasLayer" parent="."]

[node name="Pause" type="Control" parent="UI"]
margin_right = 40.0
margin_bottom = 40.0
script = ExtResource( 17 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Button" type="Button" parent="UI/Pause"]
margin_right = 12.0
margin_bottom = 20.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Joystick" type="Control" parent="UI"]
anchor_left = 0.5
anchor_top = 1.0
anchor_right = 0.5
anchor_bottom = 1.0
margin_left = -12.0
margin_top = -88.0
margin_right = 28.0
margin_bottom = -48.0
__meta__ = {
"_edit_use_anchors_": false
}

[node name="joystick" type="Sprite" parent="UI/Joystick"]
position = Vector2( 0, -34 )
texture = ExtResource( 2 )

[node name="joystickbutton" type="TouchScreenButton" parent="UI/Joystick/joystick"]
normal = ExtResource( 3 )
pressed = ExtResource( 4 )
shape = SubResource( 5 )
shape_visible = false
script = ExtResource( 5 )

[node name="Score" type="Control" parent="UI"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -20.0
margin_right = 20.0
margin_bottom = 40.0
script = ExtResource( 16 )
__meta__ = {
"_edit_use_anchors_": false
}

[node name="Label" type="Label" parent="UI/Score"]
anchor_left = 0.5
anchor_right = 0.5
margin_left = -42.0
margin_right = 42.0
margin_bottom = 73.0
custom_fonts/font = SubResource( 6 )
text = "0"
align = 1
valign = 1
__meta__ = {
"_edit_use_anchors_": false
}

[node name="FirstStars" type="Node2D" parent="."]

[node name="Star" parent="FirstStars" instance=ExtResource( 12 )]
position = Vector2( 314, 610 )

[node name="Star2" parent="FirstStars" instance=ExtResource( 12 )]
position = Vector2( 106, 288 )

[node name="Star3" parent="FirstStars" instance=ExtResource( 12 )]
position = Vector2( 328, -40 )

[node name="StickyWall" parent="FirstStars" groups=[
"object",
] instance=ExtResource( 13 )]
position = Vector2( 526, 461 )

[node name="Moon" parent="FirstStars" instance=ExtResource( 7 )]
position = Vector2( 441.635, -412.146 )
[connection signal="body_entered" from="DuplicateThresh" to="UI/Score" method="_on_DuplicateThresh_body_entered"]
[connection signal="body_entered" from="DuplicateThresh" to="DuplicateThresh" method="_on_DuplicateThresh_body_entered"]
[connection signal="body_entered" from="DuplicateThresh" to="Player" method="_on_DuplicateThresh_body_entered"]
[connection signal="body_entered" from="DuplicateThresh/LWall" to="DuplicateThresh/LWall" method="_on_LWaterfall_body_entered"]
[connection signal="playerinwfall" from="DuplicateThresh/LWall" to="Player" method="_on_Waterfall_playerinwfall"]
[connection signal="body_entered" from="DuplicateThresh/RWall" to="DuplicateThresh/RWall" method="_on_RWaterfall_body_entered"]
[connection signal="playerinwfall" from="DuplicateThresh/RWall" to="Player" method="_on_Waterfall_playerinwfall"]
[connection signal="body_entered" from="Tide" to="Tide" method="_on_Tide_body_entered"]
[connection signal="playerinwfall" from="Tide" to="Player" method="_on_Tide_playerinwfall"]
[connection signal="body_entered" from="Tide/StartThreshold" to="Tide" method="_on_Area2D_body_entered"]
[connection signal="timeout" from="Tide/Timer" to="Tide" method="_on_Timer_timeout"]
[connection signal="timeout" from="Tide/Timer2" to="Tide" method="_on_Timer2_timeout"]
[connection signal="pressed" from="UI/Pause/Button" to="UI/Pause" method="_on_Button_pressed"]
[connection signal="pressed" from="UI/Joystick/joystick/joystickbutton" to="Player" method="_on_joystickbutton_pressed"]
[connection signal="released" from="UI/Joystick/joystick/joystickbutton" to="Player" method="_on_joystickbutton_released"]
